--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <p>
                     Jmenuju se Gabriel Mazác a chodím do 9. trídy. Nejvíc me baví <strong>strih videí</strong>,
                     tvorba animací a práce s vizuálními efekty. Strihám v <strong>DaVinci Resolve</strong>.
-                    Rád vymýšlím jak video udelat zajímavejší — prechody, efekty, zvuky, proste celkový dojem.
+                    Rád vymýšlím jak video udelat zajímavejší - prechody, efekty, zvuky, proste celkový dojem.
                 </p>
                 <p>
                     Krome videí me zajímá i <strong>design</strong> a tvorba webových stránek. Naucil jsem se
@@ -123,7 +123,7 @@
         <div class="obal">
             <h3>Konícky</h3>
             <p>
-                Muj hlavní konícek je tvorba videí — rád tocím, strihám a zkouším ruzné efekty
+                Muj hlavní konícek je tvorba videí - rád tocím, strihám a zkouším ruzné efekty
                 a animace. Baví me vymýšlet jak video udelat co nejlepší. Na grafiku používám GIMP
                 a zacal jsem se ucit i Blender. Taky chodím do posilovny.
             </p>
