oprava diakritiky, přidán obrázek

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabriel Mazác - Moje stránka</title>
     <!-- popis stranky pro vyhledavace -->
-    <meta name="description" content="Osobní stránka Gabriela Mazáce - žák 9. trídy, strih videí, design a tvorba webu">
+    <meta name="description" content="Osobní stránka Gabriela Mazáce - žák 9. třídy, strihy videí, design a tvorba webu">
     <!-- pripojeni stylu -->
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -20,10 +20,10 @@
             <!-- navigace - menu -->
             <nav>
                 <ul class="menu">
-                    <li><a href="#o-mne">O mne</a></li>
+                    <li><a href="#o-mne">O mně</a></li>
                     <li><a href="#dovednosti">Dovednosti</a></li>
                     <li><a href="#projekty">Projekty</a></li>
-                    <li><a href="#konicky">Konícky</a></li>
+                    <li><a href="#koničky">Koničky</a></li>
                     <li><a href="#kontakt">Kontakt</a></li>
                 </ul>
             </nav>
@@ -33,40 +33,40 @@
     <!-- uvodni sekce - hero -->
     <section class="hero">
         <div class="obal">
-            <h2>Dobrý den, jmenuji se Gabriel ??</h2>
-            <p>Jsem žák 9. trídy, hlásím se na strední školu s IT zamerením. Baví me hlavne strih videí, animace a vizuální efekty.</p>
-            <!-- pozdrav ktery se meni podle casu - javascript -->
+            <h2>Dobrý den, jmenuji se Gabriel 😁</h2>
+            <p>Jsem žák 9. třídy, hlásím se na střední školu s IT zaměřením. Baví mě hlavně strihy videí, animace a vizuelní efekty.</p>
+            <!-- pozdrav kterym se mění podle času - javascript -->
             <p id="pozdrav"></p>
             <a class="tlacitko" href="#projekty">Moje projekty</a>
         </div>
     </section>
 
-    <!-- sekce o mne -->
+    <!-- sekce o mně -->
     <section id="o-mne" class="sekce">
         <div class="obal dva-sloupce">
             <div>
-                <h3>O mne</h3>
+                <h3>O mně</h3>
                 <p>
-                    Jmenuju se Gabriel Mazác a chodím do 9. trídy. Nejvíc me baví <strong>strih videí</strong>,
-                    tvorba animací a práce s vizuálními efekty. Strihám v <strong>DaVinci Resolve</strong>.
-                    Rád vymýšlím jak video udelat zajímavejší - prechody, efekty, zvuky, proste celkový dojem.
+                    Jmenuji se Gabriel Mazác a chodím do 9. třídy. Nejvíc mě baví <strong>strihy videí</strong>,
+                    tvorba animací a práce s vizulními efekty. Stjih dalam v <strong>DaVinci Resolve</strong>.
+                    Rád vymýšlím jak video udělat zajímavější - přechody, efekty, zvuky, prostě cel¸klový dojem.
                 </p>
                 <p>
-                    Krome videí me zajímá i <strong>design</strong> a tvorba webových stránek. Naucil jsem se
-                    základy <strong>HTML</strong> a <strong>CSS</strong> a líbí se mi jak se dá kódováním
-                    vytvorit neco vizuálne hezkého. Na grafiku používám <strong>GIMP</strong> a taky jsem
-                    zkoušel <strong>Blender</strong>, ale v tom jsem zatím zacátecník.
+                    Kromě videí mě zajímá i <strong>design</strong> a tvorba webovych stránek. Nauril jsem se
+                    základy <strong>HTML</strong> a <strong>CSS</strong> a líbí se mi jak se dá kódáváním
+                    vytvořit něco vizulně hezkho. Na grafiku používám <strong>GIMP</strong> a taky jsem
+                    zkouil <strong>Blender</strong>, ale v tom jsem zatím začátečník.
                 </p>
                 <!-- muj cil -->
                 <p class="cil">
-                    <strong>Co chci na strední:</strong> zlepšit se ve video editingu, naucit se
+                    <strong>Co chci na střední: </strong> zlepšit se ve video editingu, nauilt jsem
                     motion grafiku, pracovat v týmu a propojit video tvorbu s webovým designem.
                 </p>
             </div>
-            <!-- obrazek -->
+            <!-- obrázek -->
             <div class="obrazek-box">
-                <img src="https://picsum.photos/500/350" alt="Obrázek pocítace">
-                <p class="popisek">Ilustracní obrázek (zatím nemám vlastní)</p>
+                <img src="imgs/profile.jpg" alt="Gabriel Mazác">
+                <p class="popisek">Moje foto</p>
             </div>
         </div>
     </section>
@@ -81,7 +81,7 @@
                 <li>Animace a efekty</li>
                 <li>DaVinci Resolve</li>
                 <li>GIMP</li>
-                <li>Blender (zacátecník)</li>
+                <li>Blender (začátečník)</li>
                 <li>Tvorba miniatur</li>
                 <li>HTML (základy)</li>
                 <li>CSS (základy)</li>
@@ -95,37 +95,37 @@
             <h3>Moje projekty</h3>
 
             <div class="karty">
-                <!-- prvni projekt -->
+                <!-- první projekt -->
                 <div class="karta">
-                    <h4>?? Tato stránka</h4>
-                    <p>Moje první webová stránka kterou jsem udelal sám v HTML a CSS.</p>
-                    <span class="odkaz-brzy">Práve se na ni díváte :)</span>
+                    <h4>💻 Tato stránka</h4>
+                    <p>Moje první webová stránka kterou jsem udělal sm v HTML a CSS.</p>
+                    <span class="odkaz-brzy">Právě se na ni díváte :)</span>
                 </div>
 
-                <!-- druhy projekt -->
+                <!-- druhý projekt -->
                 <div class="karta">
-                    <h4>?? Strih videí</h4>
-                    <p>Strihám videa v DaVinci Resolve, delám grafiku v GIMPu a zkouším i Blender. Pracuju s efekty, prechody a animacemi.</p>
-                    <span class="odkaz-brzy">Ukázky pripravuji</span>
+                    <h4>🎜 Strihy videí</h4>
+                    <p>Štihám videa v DaVinci Resolve, dělám grafiku v GIMPu a zkouším i Blender. Pracuju s efekty, přechody a animacemi.</p>
+                    <span class="odkaz-brzy">Ukázky připravuji</span>
                 </div>
             </div>
 
-            <!-- jednoduchy pocitadlo kliknuti - javascript ukazka -->
+            <!-- jednoduché počítadlo kliknutí – javascript ukázka -->
             <div class="pocitadlo-box">
-                <p>Ukázka JavaScriptu - pocítadlo kliknutí:</p>
-                <button id="pocitadlo-btn" class="tlacitko">Klikni na me! (0×)</button>
+                <p>Ukázka JavaScriptu – počítadlo kliknutí:</p>
+                <button id="pocitadlo-btn" class="tlacitko">Klikni na mě! (0×)</button>
             </div>
         </div>
     </section>
 
-    <!-- konicky -->
-    <section id="konicky" class="sekce tmava">
+    <!-- koničky -->
+    <section id="koničky" class="sekce tmava">
         <div class="obal">
-            <h3>Konícky</h3>
+            <h3>Koničky</h3>
             <p>
-                Muj hlavní konícek je tvorba videí - rád tocím, strihám a zkouším ruzné efekty
-                a animace. Baví me vymýšlet jak video udelat co nejlepší. Na grafiku používám GIMP
-                a zacal jsem se ucit i Blender. Taky chodím do posilovny.
+                Můj hlavní koniček je tvorba videí – rád točím, stihám a zkouším různé efekty
+                a animace. Baví mě vymýšlet jak video udělat co nejlepší. Na grafiku používám GIMP
+                a začál jsem se učit i Blender. Taky chodím do posilovny.
             </p>
         </div>
     </section>
@@ -135,7 +135,7 @@
         <div class="obal">
             <h3>Kontakt</h3>
             <p>
-                Pokud me chcete kontaktovat, napište mi na email:
+                Pokud mě chcete kontaktovat, napište mi na email nebo zavolejte:
                 <a href="mailto:gabriel.mazac1@gmail.com">gabriel.mazac1@gmail.com</a>
             </p>
         </div>
@@ -144,11 +144,11 @@
     <!-- paticka -->
     <footer class="paticka">
         <div class="obal">
-            <p>© <span id="rok"></span> Gabriel Mazác | Udeláno jako projekt k prijímackám</p>
+            <p>© <span id="rok"></span> Gabriel Mazác | Uděláno jako projekt k příjmackám</p>
         </div>
     </footer>
 
-    <!-- javascript na konci aby se stranka nacetla driv -->
+    <!-- javascript na konci aby se stránka načetla dřív -->
     <script src="script.js"></script>
 </body>
 
