--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gabriel Mazác - Moje stránka</title>
+    <title>Gabriel Mazáč - Moje stránka</title>
     <!-- popis stranky pro vyhledavace -->
-    <meta name="description" content="Osobní stránka Gabriela Mazáce - žák 9. třídy, strihy videí, design a tvorba webu">
+    <meta name="description" content="Osobní stránka Gabriela Mazáče - žák 9. třídy, strihy videí, design a tvorba webu">
     <!-- pripojeni stylu -->
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -16,7 +16,7 @@
     <!-- hlavicka stranky s navigaci -->
     <header class="hlavicka">
         <div class="obal">
-            <h1 class="logo">Gabriel Mazác</h1>
+            <h1 class="logo">Gabriel Mazáč</h1>
             <!-- navigace - menu -->
             <nav>
                 <ul class="menu">
@@ -47,7 +47,7 @@
             <div>
                 <h3>O mně</h3>
                 <p>
-                    Jmenuji se Gabriel Mazác a chodím do 9. třídy. Nejvíc mě baví <strong>strihy videí</strong>,
+                    Jmenuji se Gabriel Mazáč a chodím do 9. třídy. Nejvíc mě baví <strong>strihy videí</strong>,
                     tvorba animací a práce s vizulními efekty. Stjih dalam v <strong>DaVinci Resolve</strong>.
                     Rád vymýšlím jak video udělat zajímavější - přechody, efekty, zvuky, prostě cel¸klový dojem.
                 </p>
@@ -65,7 +65,7 @@
             </div>
             <!-- obrázek -->
             <div class="obrazek-box">
-                <img src="imgs/profile.jpg" alt="Gabriel Mazác">
+                <img src="imgs/profile.jpg" alt="Gabriel Mazáč">
                 <p class="popisek">Moje foto</p>
             </div>
         </div>
@@ -144,7 +144,7 @@
     <!-- paticka -->
     <footer class="paticka">
         <div class="obal">
-            <p>© <span id="rok"></span> Gabriel Mazác | Uděláno jako projekt k příjmackám</p>
+            <p>© <span id="rok"></span> Gabriel Mazáč | Uděláno jako projekt k příjmackám</p>
         </div>
     </footer>
 
