--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabriel Mazáč - Moje stránka</title>
     <!-- popis stranky pro vyhledavace -->
-    <meta name="description" content="Osobní stránka Gabriela Mazáče - žák 9. třídy, strihy videí, design a tvorba webu">
+    <meta name="description" content="Osobní stránka Gabriela Mazáče - žák 9. třídy, střihy videí, design a tvorba webu">
     <!-- pripojeni stylu -->
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -23,7 +23,7 @@
                     <li><a href="#o-mne">O mně</a></li>
                     <li><a href="#dovednosti">Dovednosti</a></li>
                     <li><a href="#projekty">Projekty</a></li>
-                    <li><a href="#koničky">Koničky</a></li>
+                    <li><a href="#koničky">Koníčky</a></li>
                     <li><a href="#kontakt">Kontakt</a></li>
                 </ul>
             </nav>
@@ -34,7 +34,7 @@
     <section class="hero">
         <div class="obal">
             <h2>Dobrý den, jmenuji se Gabriel 😁</h2>
-            <p>Jsem žák 9. třídy, hlásím se na střední školu s IT zaměřením. Baví mě hlavně strihy videí, animace a vizuelní efekty.</p>
+            <p>Jsem žák 9. třídy, hlásím se na střední školu s IT zaměřením. Baví mě hlavně střihy videí, animace a vizuální efekty.</p>
             <!-- pozdrav kterym se mění podle času - javascript -->
             <p id="pozdrav"></p>
             <a class="tlacitko" href="#projekty">Moje projekty</a>
@@ -47,19 +47,19 @@
             <div>
                 <h3>O mně</h3>
                 <p>
-                    Jmenuji se Gabriel Mazáč a chodím do 9. třídy. Nejvíc mě baví <strong>strihy videí</strong>,
-                    tvorba animací a práce s vizulními efekty. Stjih dalam v <strong>DaVinci Resolve</strong>.
-                    Rád vymýšlím jak video udělat zajímavější - přechody, efekty, zvuky, prostě cel¸klový dojem.
+                    Jmenuji se Gabriel Mazáč a chodím do 9. třídy. Nejvíc mě baví <strong>střihy videí</strong>,
+                    tvorba animací a práce s vizuálními efekty. Střih dělám v <strong>DaVinci Resolve</strong>.
+                    Rád vymýšlím jak video udělat zajímavější - přechody, efekty, zvuky, prostě celkový dojem.
                 </p>
                 <p>
-                    Kromě videí mě zajímá i <strong>design</strong> a tvorba webovych stránek. Nauril jsem se
+                    Kromě videí mě zajímá i <strong>design</strong> a tvorba webových stránek. Naučil jsem se
                     základy <strong>HTML</strong> a <strong>CSS</strong> a líbí se mi jak se dá kódáváním
-                    vytvořit něco vizulně hezkho. Na grafiku používám <strong>GIMP</strong> a taky jsem
-                    zkouil <strong>Blender</strong>, ale v tom jsem zatím začátečník.
+                    vytvořit něco vizuálně hezkého. Na grafiku používám <strong>GIMP</strong> a taky jsem
+                    zkoušel <strong>Blender</strong>, ale v tom jsem zatím začátečník.
                 </p>
                 <!-- muj cil -->
                 <p class="cil">
-                    <strong>Co chci na střední: </strong> zlepšit se ve video editingu, nauilt jsem
+                    <strong>Co chci na střední: </strong> zlepšit se ve video editu, naučit se
                     motion grafiku, pracovat v týmu a propojit video tvorbu s webovým designem.
                 </p>
             </div>
@@ -77,7 +77,7 @@
             <h3>Co umím</h3>
             <!-- seznam dovednosti jako tagy -->
             <ul class="tagy">
-                <li>Strih videa</li>
+                <li>Střih videa</li>
                 <li>Animace a efekty</li>
                 <li>DaVinci Resolve</li>
                 <li>GIMP</li>
@@ -98,14 +98,14 @@
                 <!-- první projekt -->
                 <div class="karta">
                     <h4>💻 Tato stránka</h4>
-                    <p>Moje první webová stránka kterou jsem udělal sm v HTML a CSS.</p>
+                    <p>Moje první webová stránka kterou jsem udělal sám v HTML a CSS.</p>
                     <span class="odkaz-brzy">Právě se na ni díváte :)</span>
                 </div>
 
                 <!-- druhý projekt -->
                 <div class="karta">
-                    <h4>🎜 Strihy videí</h4>
-                    <p>Štihám videa v DaVinci Resolve, dělám grafiku v GIMPu a zkouším i Blender. Pracuju s efekty, přechody a animacemi.</p>
+                    <h4>🎜 Střihy videí</h4>
+                    <p>Stříhám videa v DaVinci Resolve, dělám grafiku v GIMPu a zkouším i Blender. Pracuju s efekty, přechody a animacemi.</p>
                     <span class="odkaz-brzy">Ukázky připravuji</span>
                 </div>
             </div>
@@ -123,9 +123,9 @@
         <div class="obal">
             <h3>Koničky</h3>
             <p>
-                Můj hlavní koniček je tvorba videí – rád točím, stihám a zkouším různé efekty
+                Můj hlavní koniček je tvorba videí – rád točím, stříhám a zkouším různé efekty
                 a animace. Baví mě vymýšlet jak video udělat co nejlepší. Na grafiku používám GIMP
-                a začál jsem se učit i Blender. Taky chodím do posilovny.
+                a začal jsem se učit i Blender. Taky chodím do posilovny.
             </p>
         </div>
     </section>
@@ -135,7 +135,7 @@
         <div class="obal">
             <h3>Kontakt</h3>
             <p>
-                Pokud mě chcete kontaktovat, napište mi na email nebo zavolejte:
+                Pokud mě chcete kontaktovat, napište mi na email:
                 <a href="mailto:gabriel.mazac1@gmail.com">gabriel.mazac1@gmail.com</a>
             </p>
         </div>
@@ -144,7 +144,7 @@
     <!-- paticka -->
     <footer class="paticka">
         <div class="obal">
-            <p>© <span id="rok"></span> Gabriel Mazáč | Uděláno jako projekt k příjmackám</p>
+            <p>© <span id="rok"></span> Gabriel Mazáč | Uděláno jako projekt k příjmačkám</p>
         </div>
     </footer>
 
